lab1/Test/L1-A-9-71.cmm
float ;
int reWJYbH8e9HuZMl977r 

int JOc2 ( struct CttB6 {
  int tB ;
}EnxDjRW8u , struct {
  int myyscaOS5e ;
}qMjNw9pg ) {
  struct f_1xIB5c4w mEDPMQsk00n49xoq6k5X = FikurM8R0cJRjmAGW 
    && x78Q665A7LVMg53O7_M != JpS44w0jq + ! hfM_uqZw [ 
    EAYC = IxUtOfN75u4rE1AJck || m8W6s7IKh72h3sRUutI >= 
    ScroQpKE7eDRqQbzjrpK - i6rHRXLIEORg * _FgLJ3Ti ( Z86lGZJlX5h 
    , YF9zbqK3SJ6yDpjJ5ahl > _PnMgRhOT6BfIbcqKcJ - - ou_mEfHcdJ804d2zt6u 
    [ vc5_xfdHrg5im || smCTzYd7tbyv2 == p7i * ( babm8f8nv 
    / ( TNM39dB6umv < JGWg75KqnRpV9TBcm ) * 94273249.1363278125 
    ) ] <= 1311748565 / - - ! - CRa9ne2_h7xsrFRNBJ ) . 
    JIWMnx3a6NX02 / - - oY6qtVFpHEcp ( ) ] , YWpbss0J 
    [ ] ;
}
int ;
int ;
int ;
int hvP4kaGkAgVtYqT_TS , bwBnQ7lzAC73r1j1mN 

;
int N ( ) {
  if ( W7DgG8v   while ( vjrLvOvvXUpE )   if ( _dmE8Z4 
    )   return xJ18i1KXOR6hFKni ;
else {
  }

else   if JzWHOs4 )   hA9xIo6_qU2Qsq ;


}
